# esp-fc-configurator

./: CMakeLists.txt  README.md
src/: main.cpp
src/model/: AppState.h  FcConfigStore.cpp  FcConfigStore.h  FcStatus.h  FirmwareInfo.h  RxConfig.h  SensorData.h
src/protocol/: CliSession.cpp  CliSession.h  MspClient.cpp  MspClient.h  MspCodec.cpp  MspCodec.h
src/transport/: ITransport.h  SerialTransport.cpp  SerialTransport.h  TcpTransport.cpp  TcpTransport.h
src/ui/: AttitudeView.cpp  AttitudeView.h  MainWindow.cpp  MainWindow.h
